# WifiCam

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  todo
oldhtmls/: droidcam.html  index.html
qml/: CameraToolbar.qml  Canvas.qml  ChooseCameraPop.qml  ConnectInfo.qml  Header.qml  Main.qml  MainContent.qml  PermissionReq.qml  PreferencesPop.qml  qml.qrc
src/: camera_list_model.cpp  camera_list_model.h  cameracontroller.cpp  cameracontroller.h  cameramodel.cpp  cameramodel.h  clienthttpserver.cpp  clienthttpserver.h  main.cpp  mjpegserver.cpp  mjpegserver.h  networkinfo.h
